@@ -17,6 +17,7 @@ TRUNK
 ### Security and authentication
 
 - Advertise supported SASL Channel-Binding types (XEP-0440)
+- Implement RFC 9266 'tls-exporter' channel binding with TLS 1.3
 
 ## Removed
 
